✨ Added delete option for results and opensearch
